fixed text -> background contrast issue

--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -1,1 +1,1 @@
-$primary: rgb(1, 104, 104);
+$primary: rgb(2, 128, 128);
